# Lory

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  SECURITY.md  pyproject.toml  sonar-project.properties
.github/workflows/: build.yml
lory/: .dockerignore  Dockerfile  pyproject.toml
src/app/: main.py
src/app/api/v1/: mensage.py
src/app/core/: database.py  init_db.py
tests/: test_app.py  test_database.py  test_init_db.py  test_main.py  test_webhook.py  teste_database.py
